# Persona_Weaver

./: .env.production.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  开发日志.md  测试报告.md  项目面试分析报告.md
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  persona_weaver.spec  pyproject.toml  run.py  test_debug.py
backend/app/: main.py
backend/app/api/routes/: config.py  data.py  (+4 more)
backend/app/core/: config.py  database.py  dependencies.py  logging.py  middleware.py  persistence.py  redis.py  security.py
backend/app/engine/: __init__.py  chat_pipeline.py
backend/app/llm/: __init__.py  embedder.py  errors.py  output_parser.py  provider.py  provider_factory.py  router.py
backend/app/models/: __init__.py  dimension_snapshot.py  message.py  prompt.py  psychology_pattern.py  report.py  session.py  user.py
backend/app/schemas/: __init__.py  chat.py  config.py  llm.py  pattern.py
backend/app/services/: __init__.py  message_service.py  pattern_service.py  prompt_service.py  report_generator.py  report_service.py  session_service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/scripts/: seed_patterns.py
backend/seed_data/: patterns.json
backend/tests/: conftest.py
backend/tests/unit/: test_bayesian.py  test_chat_pipeline.py  test_conductor.py  test_edge_cases.py  test_emotion.py  test_inference_modules.py  test_input_validation.py  test_llm_provider.py  test_llm_schemas.py  test_models.py  test_report_generator.py  test_security.py  test_services.py
(+63 files in other folders)
